# cassyork-docs

./: .air.toml  .dockerignore  .gitignore  ARCHITECTURE.md  Makefile  docker-compose.yml  go.mod  go.sum  project-plan.md  sqlc.yaml
.github/workflows/: deploy-main.yml
cmd/admin-ui/: main.go
cmd/customer-api/: main.go
cmd/ingestion-api/: main.go
cmd/internal-api/: main.go
cmd/status-api/: main.go
cmd/webhook-api/: main.go
deploy/: Dockerfile.admin-ui  LINODE.md  docker-compose.linode.yml  env.linode.example  linode-connection.env.example  linode-create.sh  linode-migrate-remote.sh  linode-ssh.sh  push-to-linode.sh
deploy/postgres-init/: 01-create-cassyork-db.sh  01-create-cassyork-db.sql
internal/adminui/: aggregate.go  (+22 more)
migrations/: 00001_document_and_runs.sql  00002_workspace_seed.sql
python/: pyproject.toml
python/src/cassyork_workers/: __init__.py  contracts.py  observability.py  worker_main.py
python/src/cassyork_workers/activities/: __init__.py  document_pipeline.py
python/src/cassyork_workers/application/services/: ingestion_pipeline.py
python/src/cassyork_workers/domain/document/: __init__.py  document.py
python/src/cassyork_workers/domain/ingestion/: __init__.py  run.py
python/src/cassyork_workers/domain/providers/: ports.py
python/src/cassyork_workers/domain/schema_output/: __init__.py  validate.py
python/src/cassyork_workers/infrastructure/persistence/: __init__.py  postgres_store.py
python/src/cassyork_workers/infrastructure/providers/: stub_provider.py
python/src/cassyork_workers/workflows/: document_ingestion.py
(+36 files in other folders)
