[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cassyork-workers"
version = "0.1.0"
description = "Python Temporal workers — models, parsing, validation, evaluation, review"
requires-python = ">=3.11"
dependencies = [
  "temporalio>=1.8.0",
  "asyncpg>=0.29.0",
  "pydantic>=2.9.0",
  "jsonschema>=4.23.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "grpcio>=1.66.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cassyork_workers"]

[tool.ruff]
line-length = 100
target-version = "py311"
